# himitsu

./: README.md  pyproject.toml
src/himitsu/core/: cli.py  decrypt.py  encrypt.py
src/himitsu/modules/: derive_key.py  dir_path.py  generate_salt.py
